2008-05-02  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/backend.py:
	ExternalToolDriver.__init__: Add a _hup_expected member variable, 
	initializing it to False.
	ExternalToolDriver.Execute: Initialize it to False here too.
	DetectParametersDriver._on_next_line): Detect an extra line from 
	irrecord that suggests that it will finish later without the success 
	text.
	IrRecordDriver._on_hangup(): Finish sucessfully if _hup_expected 
	instead of aborting.

	This fixes basic learning with the XBox remote, though irrecord is 
	not capable of then learning key codes for it.

2008-05-02  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: dist autogen.sh because it is useful sometimes.

0.2.7:

2008-04-30  Murray Cumming  <murrayc@murrayc.com>

	* help/C/gnome-lirc-properties.xml: Minor improvements.

2008-04-30  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/lirc.pyL RemoteL Added __set_contributor(),
	  __set_vendor(), and __set_product(). __repr__(): Used them to make 
	these properties writeable.
	* gnome_lirc_properties/ui/CustomConfiguration.py;
	  CustomConfiguration._on_response(): Set these properties so that  
	they are written to the custom lird.conf.gnome file, so they are shown 
	again when reopening the custom configuration.
	This fixes bug #530504.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py post_file(),
	RetrieveTarballThread._retrieve(),
	RetrieveTarballThread._retrieve_archive(): Added more logging and 
	TODOS because upload/download hang when the URIs are totally bogus.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Improve some mnemonics, fixing 
	bug #530349 (Wouter Bolsterlee).

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py (post_file): Improve the logging, 
	so we see what URL is having a problem.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>
